[gd_scene load_steps=14 format=3 uid="uid://5wsmpnnijdd4"]

[ext_resource type="StyleBox" uid="uid://daxhx5qr5qdeu" path="res://assets/styles/SolidPanel.tres" id="1_bs764"]
[ext_resource type="Script" uid="uid://0g1rcirbrk2g" path="res://panels/CueSheet/CueSheet.gd" id="2_3yu8g"]
[ext_resource type="StyleBox" uid="uid://csle20exwqtti" path="res://assets/styles/PanelMenuBar.tres" id="3_weh1i"]
[ext_resource type="PackedScene" uid="uid://pmm0fpocy30v" path="res://components/ObjectPicker/ObjectPickerButton/ObjectPickerButton.tscn" id="4_n2oui"]
[ext_resource type="Texture2D" uid="uid://dnfqijjcnit7c" path="res://assets/icons/CueList.svg" id="5_u3ii3"]
[ext_resource type="Texture2D" uid="uid://c1cl6qetwg8st" path="res://assets/icons/Arrow_back.svg" id="6_qhhlr"]
[ext_resource type="Texture2D" uid="uid://kkblmodueva1" path="res://assets/icons/Arrow_foward.svg" id="7_dsg6b"]
[ext_resource type="Texture2D" uid="uid://dfrrs2dnvlvsu" path="res://assets/icons/Delete.svg" id="7_sxsav"]
[ext_resource type="PackedScene" uid="uid://dfu5s8fjy0ex4" path="res://components/UIPanel/EditControls.tscn" id="8_38mc3"]
[ext_resource type="Texture2D" uid="uid://dghhvu27mcp3u" path="res://assets/icons/PlayPause.svg" id="8_bs764"]
[ext_resource type="Texture2D" uid="uid://qporw0h5fc8b" path="res://assets/icons/Stop.svg" id="9_3yu8g"]
[ext_resource type="PackedScene" uid="uid://c30mlwfrsxbcl" path="res://components/IntensityButton/IntensityButton.tscn" id="10_weh1i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n5nmt"]
bg_color = Color(0, 0.513726, 1, 0.364706)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 3
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CueSheet" type="PanelContainer" node_paths=PackedStringArray("_tree", "_select_box", "_object_picker_button", "_intensity_button", "_cue_trigger_option", "_go_button", "_delete_button", "_transport_control_buttons", "edit_controls", "buttons")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_bs764")
script = ExtResource("2_3yu8g")
_tree = NodePath("VBoxContainer/Tree")
_select_box = NodePath("VBoxContainer/Tree/SelectBox")
_object_picker_button = NodePath("VBoxContainer/PanelContainer/HBoxContainer/ObjectPickerButton")
_intensity_button = NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CuePlaybackControls/HBoxContainer/IntensityButton")
_cue_trigger_option = NodePath("VBoxContainer/Tree/CueTriggerModeOption")
_go_button = NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer/Go")
_delete_button = NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer/HBoxContainer/DeleteCue")
_transport_control_buttons = [NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer/Previous"), NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer/Next"), NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CuePlaybackControls/HBoxContainer/PlayPause"), NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CuePlaybackControls/HBoxContainer/Stop")]
_active_cue_bg_color = Color(0.396165, 0.416697, 0.422633, 0.464)
edit_controls = NodePath("VBoxContainer/PanelContainer/HBoxContainer/EditControls")
buttons = [NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer/Previous"), NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer/Go"), NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer/Next"), NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CuePlaybackControls/HBoxContainer/PlayPause"), NodePath("VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CuePlaybackControls/HBoxContainer/Stop")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_weh1i")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ObjectPickerButton" parent="VBoxContainer/PanelContainer/HBoxContainer" instance=ExtResource("4_n2oui")]
layout_mode = 2
text = "CueSheet"
icon = ExtResource("5_u3ii3")
flat = true
filter = "CueList"
enable_store_mode = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="CueSeekControls" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls"]
layout_mode = 2

[node name="Previous" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer"]
layout_mode = 2
disabled = true
icon = ExtResource("6_qhhlr")

[node name="Go" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer"]
layout_mode = 2
disabled = true
text = "GO"

[node name="Next" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer"]
layout_mode = 2
disabled = true
icon = ExtResource("7_dsg6b")

[node name="CuePlaybackControls" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CuePlaybackControls"]
layout_mode = 2

[node name="PlayPause" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CuePlaybackControls/HBoxContainer"]
layout_mode = 2
disabled = true
icon = ExtResource("8_bs764")

[node name="Stop" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CuePlaybackControls/HBoxContainer"]
layout_mode = 2
disabled = true
icon = ExtResource("9_3yu8g")

[node name="IntensityButton" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CuePlaybackControls/HBoxContainer" instance=ExtResource("10_weh1i")]
layout_mode = 2
disabled = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="DeleteCue" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
disabled = true
icon = ExtResource("7_sxsav")

[node name="EditControls" parent="VBoxContainer/PanelContainer/HBoxContainer" instance=ExtResource("8_38mc3")]
layout_mode = 2
show_edit = false
show_settings = false

[node name="Tree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 11
theme_override_constants/inner_item_margin_left = 10
theme_override_constants/relationship_line_width = 1
column_titles_visible = true
hide_folding = true
hide_root = true
select_mode = 2

[node name="CueTriggerModeOption" type="PopupMenu" parent="VBoxContainer/Tree"]
position = Vector2i(860, 500)
size = Vector2i(200, 100)
prefer_native_menu = true
item_count = 1
item_0/text = "TriggerMode"
item_0/id = 0
item_0/separator = true

[node name="SelectBox" type="PanelContainer" parent="VBoxContainer/Tree"]
visible = false
layout_mode = 0
offset_right = 267.0
offset_bottom = 257.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n5nmt")

[connection signal="object_selected" from="VBoxContainer/PanelContainer/HBoxContainer/ObjectPickerButton" to="." method="set_cue_list"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer/Go" to="." method="_on_go_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CueSeekControls/HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CuePlaybackControls/HBoxContainer/PlayPause" to="." method="_on_play_pause_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/CuePlaybackControls/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer/HBoxContainer/DeleteCue" to="." method="_on_delete_cue_pressed"]
[connection signal="column_title_clicked" from="VBoxContainer/Tree" to="." method="_on_tree_column_title_clicked"]
[connection signal="gui_input" from="VBoxContainer/Tree" to="." method="_on_tree_gui_input"]
[connection signal="item_edited" from="VBoxContainer/Tree" to="." method="_on_tree_item_edited"]
[connection signal="multi_selected" from="VBoxContainer/Tree" to="." method="_set_item_selection"]
[connection signal="nothing_selected" from="VBoxContainer/Tree" to="." method="_clear_selection"]
[connection signal="index_pressed" from="VBoxContainer/Tree/CueTriggerModeOption" to="." method="_on_cue_trigger_mode_option_index_pressed"]
